# rlmlocal-sandbox

./: .gitignore  README.md  RELEASE_NOTES.md
.github/workflows/: release.yml
scripts/: resolveExtractTypes.cjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  opencode_host.rs
ui/: index.html
