[package]
name = "rlmlocal-sandbox"
version = "0.1.1"
description = "Local execution sandbox for RLMlocal — runs tests and applies approved code changes locally."
authors = ["RLMlocal"]
license = ""
repository = "https://github.com/fortsignal/rlmlocal-sandbox"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2" # one-click "Pair now" → opens the default browser at rlmlocal.com/?pair=<code>
tauri-plugin-updater = "2" # AUTO-UPDATE: pull signed releases from GitHub (v0.1.2+)
tiny_http = "0.12"
# Task-scoped Cloudflare bridge: OpenCode → Worker /infer via localhost OpenAI-compatible adapter.
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "rustls"] }
getrandom = "0.2" # pairing-token secret for the bridge (hardening pt 3)
# NOTE: GEPA/rusqlite deliberately EXCLUDED from public sandbox (EXECUTOR-RELEASE-SYNC-UPDATER) —
# monorepo-only until GEPA is product-live. Brain soft-nulls missing log_trace/export_diagnostics.
